# gitlab-toolbox

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: pre-commit
specs/: architecture.md  coding-standards.md  git-workflow.md
src/gitlab_toolbox/: __init__.py  cli.py
src/gitlab_toolbox/api/: __init__.py  auth.py  ci_lint.py  client.py  groups.py  merge_requests.py  pipeline_schedules.py  pipelines.py  projects.py  users.py
src/gitlab_toolbox/commands/: __init__.py  auth.py  ci.py  groups.py  merge_requests.py  pipeline_schedules.py  pipelines.py  projects.py  users.py
src/gitlab_toolbox/formatters/: __init__.py  csv_formatter.py  display.py  format_decorator.py  generic_handlers.py  json_formatter.py  markdown_formatter.py
src/gitlab_toolbox/models/: __init__.py  auth.py  ci_lint.py  group.py  merge_request.py  pipeline.py  pipeline_schedule.py  project.py  user.py
tests/: test_ci_lint.py  test_display_formatter.py  test_groups.py  test_markdown_formatter.py  test_pipeline_schedules.py  test_users.py
